# routeguard

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  protocol.md
examples/: README.md  decay_event.json  first_claim.json  gate_event.json  gate_event_allow.json  gate_event_deny.json  gate_event_deny_missing_approval  interaction_event.canonical.json  invariant_violation_event.json  model_output.txt  model_output_good.txt  policy.json  structured_output_policy_strict.json  tool_permission_send_external_email.json  tool_permission_send_external_email_deny_caller.json  tool_permission_send_external_email_deny_missing_approval.json  update_event.json
routeguard/: __init__.py  bowditch.py  cli.py  engine.py  evaluators.py  golden.py  loaders.py  models.py  validators.py
routeguard/audit/: __init__.py
routeguard/conformance/: __init__.py
routeguard/runtime_geometry/: __init__.py
routeguard/spec_core/: README.md
routeguard/tools/: __init__.py
spec/: README.md  claim_record.json  claim_record.schema.json  decay_event.example.json  decay_event.json  gate_event.example.json  gate_event.json  interaction_event.missing_subject.example.json  routeguard_bowditch_closure_v0.3.json  structured_output_gate.json  tool_permission.json  update_event.json
spec/schema/: decision.schema.json  interaction_event.schema.json
src/: README.md
